--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <section class="contact-section">
             <h1>Contactez-nous</h1>
             <p>Vous avez une question ou besoin d'informations ? Envoyez-nous un message :</p>
-            <form id="contact-form" onsubmit="prepareMailto(event)">
+            <form action="mailto:digitaledominance2@gmail.com" method="post" enctype="text/plain">
                 <div class="form-group">
                     <label for="name">Nom</label>
                     <input type="text" id="name" name="name" placeholder="Votre nom" required>
