--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             </ul>
         </nav>
     </header>
+    <head>
+        <!-- Cette balise permet de rendre ton site réactif sur les écrans mobiles -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Autres balises comme le titre, les liens CSS, etc. -->
+    </head>
+    
 
     <main>
         <section class="hero">
